cloud-frontend/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-cloud-frondend-a
  labels:
    api_exposed: "true"
  annotations:
    api_version: v1.0.0 
    api_name: cloud-frontend 
    api_swagger: "gitops/ibmcloud/a-cloud-frontend/cloud-frontend-svc_1.0.0.yaml"
    api_protocol: https 
spec:
  hosts:
  - "cloud-frontend.192.168.64.2.nip.io"
  gateways:
  - cloud-frontend-gateway
  http:
  - match:
    - headers:
        mode:
          exact: gold
    route:
    - destination:
        host: service-cloud-frontend-e
        subset: service-e
        port:
          number: 80
  - route:
    - destination:
        host: service-cloud-frontend-a
        subset: service-a
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-cloud-frontend-a
spec:
  host: service-cloud-frontend-a
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: service-a
    labels:
      app: service-cloud-frontend-a
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-cloud-frontend-e
spec:
  host: service-cloud-frontend-e
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: service-e
    labels:
      app: service-cloud-frontend-e
